force-app/main/default/objects/Group__c/fields/Album_Id__c.field-meta.xml
<CustomField>
    <fullName>Album_Id__c</fullName>
    <label>Album Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>