force-app/main/default/objects/Group__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Owned Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>