force-app/main/default/objects/Group__c/fields/Group_Picture__c.field-meta.xml
<CustomField>
    <fullName>Group_Picture__c</fullName>
    <label>Group Picture</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>